<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_img"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/label_bank"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon" />


    <TextView
        android:id="@+id/textViewLabelText"
        android:layout_width="269dp"
        android:layout_height="43dp"
        android:text="@string/text_label"
        android:textColor="#A56FF3"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageButton
        android:id="@+id/imageViewOtdBank"

        android:layout_width="340dp"
        android:layout_height="87dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/back_img_view"
        android:contentDescription="@string/btn_otdel_bank"
        android:onClick="onClickOtdBank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
    />


    <ImageView
        android:id="@+id/imageViewKurs"
        android:layout_width="340dp"
        android:layout_height="87dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_img_view"
        android:contentDescription="@string/btn_kurs_val"
        android:onClick="onClickKurs"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewOtdBank"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/kurs_val_img" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/kurs_val_text"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewKurs"
        app:layout_constraintStart_toStartOf="@+id/imageViewKurs"
        app:layout_constraintTop_toTopOf="@+id/imageViewKurs"
        app:layout_constraintVertical_bias="0.219"
        tools:ignore="PrivateResource" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


    <Button
        android:id="@+id/button"
        android:layout_width="319dp"
        android:layout_height="71dp"
        android:background="@drawable/btn_style"
        android:gravity="center"
        android:onClick="onClickLogin"
        android:text="@string/text_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewKurs"
        app:layout_constraintVertical_bias="0.173" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewOtdBank"
        app:layout_constraintStart_toStartOf="@+id/imageViewOtdBank"
        app:layout_constraintTop_toTopOf="@+id/imageViewOtdBank"
        app:layout_constraintVertical_bias="0.467"
        app:srcCompat="@drawable/key"
        android:contentDescription="@string/img_key" />

    <TextView
        android:id="@+id/textViewUSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewKurs"
        app:layout_constraintStart_toStartOf="@+id/imageViewKurs"
        app:layout_constraintTop_toTopOf="@+id/imageViewKurs"
        app:layout_constraintVertical_bias="0.867" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/text_otdel_bank"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewOtdBank"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageViewOtdBank"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/textViewEUR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewKurs"
        app:layout_constraintEnd_toEndOf="@+id/imageViewKurs"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/imageViewKurs"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEUR"
        app:layout_constraintTop_toTopOf="@+id/imageViewKurs" />

    <TextView
        android:id="@+id/textViewTest"
        android:layout_width="52dp"
        android:layout_height="21dp"
        android:text="Логин"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="305dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>